Spacing fix for mobile header

--- a/assets/sass/base/_header.scss
+++ b/assets/sass/base/_header.scss
@@ -8,10 +8,14 @@ header {
         z-index: 10;
         width: 90%;
         height: 60px;
-        margin-top: 70px;
+        margin-top: 40px;
         align-content: center;
         display: flex;
         flex-direction: row;
+
+        @include breakpoint(tablet) {
+            margin-top: 70px;
+        }
 
         a {
             color: white;
